--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "async-cache": "^1.1.0",
     "fs-extra": "^10.0.0",
-    "yandex-market-language": "^0.4.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "yandex-market-language": "git+https://github.com/Adisama-desu/yandex-market-language.git"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
